--- a/Mary.WindowsClient/Views/MainWindow.xaml
+++ b/Mary.WindowsClient/Views/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Mary.WindowsClient.MainWindow"
+﻿<Window x:Class="Mary.WindowsClient.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Mary.WindowsClient"
+        xmlns:local="clr-namespace:Mary.WindowsClient.Views"
         mc:Ignorable="d"
         Title="Mary" Height="450" Width="800">
     <Grid Margin="0,0,193.333,50.667">
